# account

./: .flake8  .pre-commit-config.yaml  README.rst  conftest.py  pyproject.toml
account/: account.py  button_callbacks.py  db.py  layout.py  main.py  new_account.py  plot.py
account/assets/: style.css
data/assets/: style.css
data/test/: bad_fund_table.db  fund_table_empty.db  no_funds.db  position.db
tests/: db_test.py
